--- a/cn.zh-CN/用户指南/Logtail采集/简介.md
+++ b/cn.zh-CN/用户指南/Logtail采集/简介.md
@@ -1,6 +1,6 @@
 # 简介 {#concept_ppd_yx5_vdb .concept}
 
-Logtail接入服务是日志服务提供的日志采集Agent，通过控制台方式帮助您实时采集阿里云ECS、自建IDC、其他云厂商等服务器上的日志。
+Logtail接入服务是日志服务提供的日志采集Agent，通过控制台方式帮助您实时采集阿里云ECS、自建IDC、其他云厂商等服务器上的日志,非常适合。
 
 ![](images/2650_zh-CN.png "Logtail采集功能")
 
